# LDSFL_Meander

./: .gitignore  .pre-commit-config.yaml  BUILD_EXE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  Reg.py  Run.py  USER_MANUAL.md  gui_ldsfl.py  gui_smoke_test.py  pyproject.toml  requirements.txt  run_ldsfl.py  smoke_test.py
Input/: Parameter.csv  xy.csv
docs/: LDSFL_Meander_user_manual.tex  cli_usage.md  curvature_arclength_scaling.md  index.md  macos_gui_notes.md  model_scope_and_validation.md  portfolio_summary.md  project_health_checklist.md  release_notes_v0_6_5.md  reproducibility_checklist.md  run_manifest_template.md  sinuosity_equivalence_stability.md  stop_on_sinuosity_stability.md  theory_code_mapping.md  timestep_notes.md  validation_notes.md  validation_strategy.md
examples/: run_manifest_template.yml
ldsfl/: __init__.py  evolution.py  flowfield.py  flowfield_numba.py  flowfield_periodic.py  geometry.py  gui_utils.py  inputs.py  main.py  mathutils.py  modes.py  outputs.py  profile.py  resistance.py  resonance.py  semiana.py  stability.py  vertical.py
tests/: test_cli_config.py  test_cli_output_smoke.py  test_cli_return_equivalence_stability.py  test_cli_sinuosity_stability.py  test_curvature_scaling_diagnostic.py  test_curvature_sign_consistency.py  test_cutoff_no_plots.py  test_erosion_rate_control.py  test_evolution.py  test_example_input_schema.py  test_final_snapshot_velocity.py  test_flowfield_backend_guardrails.py  test_flowfield_physics_regression.py  test_flowfield_transfer_function.py  test_gui_equivalence_controls.py  test_inputs.py  (+20 more)
(+14 files in other folders)
