[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ldsfl-meander"
version = "0.6.3.1"
description = "Reduced morphodynamic model for meandering rivers with command-line and GUI workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Sergio Lopez-Dubon" },
  { name = "Leonardo Sgarabotto" },
  { name = "Alessandro Frascati" },
  { name = "Stefano Lanzoni" }
]
keywords = [
  "meandering rivers",
  "morphodynamics",
  "reduced model",
  "river modelling",
  "research software",
  "Python"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "h5py",
  "threadpoolctl",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ldsfl*"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["smoke_test.py", "gui_smoke_test.py"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
